# middlewares/authorization.go
@@ -62,13 +62,10 @@ func PhotoAuthorization() gin.HandlerFunc {
 			})
 			return
 		}
-
 		userData := c.MustGet("userData").(jwt.MapClaims)
 		userID := uint(userData["id"].(float64))
 		Photo := models.Photo{}
-
 		err = db.Select("user_id").First(&Photo, uint(photoID)).Error
-
 		if err != nil {
 			c.AbortWithStatusJSON(http.StatusNotFound, gin.H{
 				"error":   "Data not Found",
@@ -76,17 +73,46 @@ func PhotoAuthorization() gin.HandlerFunc {
 			})
 			return
 		}
-
 		if Photo.UserID != userID {
 			c.AbortWithStatusJSON(http.StatusUnauthorized, gin.H{
 				"error":   "Unauthorization",
 				"message": "you are not allowed to acces this data",
 			})
-
 			return
 		}
-
 		c.Next()
 	}
+}
 
+func SocMedAuthorization() gin.HandlerFunc {
+	return func(c *gin.Context) {
+		db := database.GetDB()
+		socmedID, err := strconv.Atoi(c.Param("socmedId"))
+		if err != nil {
+			c.AbortWithStatusJSON(http.StatusBadRequest, gin.H{
+				"error":    "Bad Request",
+				"messages": "invailid parameter",
+			})
+			return
+		}
+		userData := c.MustGet("userData").(jwt.MapClaims)
+		userID := uint(userData["id"].(float64))
+		SocialMedia := models.SocialMedia{}
+		err = db.Select("user_id").First(&SocialMedia, uint(socmedID)).Error
+		if err != nil {
+			c.AbortWithStatusJSON(http.StatusNotFound, gin.H{
+				"error":   "Data not Found",
+				"message": "data doesn't exist",
+			})
+			return
+		}
+		if SocialMedia.UserID != userID {
+			c.AbortWithStatusJSON(http.StatusUnauthorized, gin.H{
+				"error":   "Unauthorization",
+				"message": "you are not allowed to acces this data",
+			})
+			return
+		}
+		c.Next()
+	}
 }
